# MalaFlow

./: .env.example  .gitignore  AGENTS.md  README.md
apps/api/: .gitignore  .railwayignore  Dockerfile  pyproject.toml  railway.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_menu_item_archived.py  0003_phone_login_location.py  0004_oauth_mcp_auth.py
apps/api/app/: __init__.py  bootstrap.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py  security.py
apps/api/app/mcp_server/: server.py  tool_handlers.py
apps/api/app/routers/: admin.py  admin_console.py  auth.py  oauth.py  public.py  restaurant.py
apps/api/app/services/: admin.py  auth.py  formatters.py  mcp_logging.py  notifications.py  oauth.py  orders.py  restaurants.py
apps/api/scripts/: mcp_smoke.py  openai_e2e.py  purge_demo_data.py  seed.py
apps/api/tests/: test_oauth_flow.py  test_order_flow.py
apps/web/: .gitignore  .railwayignore  Dockerfile  package-lock.json  package.json  railway.toml
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/admin/: page.tsx
apps/web/app/connect/: page.tsx
apps/web/app/login/: page.tsx
apps/web/app/restaurant/: page.tsx
apps/web/components/: RestaurantLoginForm.tsx
apps/web/lib/: api.ts
docs/: MVP.md  USER_GUIDE.md
skills/malaflow/: SKILL.md
